--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "proxy": "http://localhost:5280",
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
+    "@types/react-leaflet": "^2.8.3",
     "@types/react-router-dom": "^5.3.3"
   }
 }
